--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Gray Smith Resume</title>
+    <title>Cody Taft Resume</title>
   </head>
   <body>
-    <embed src="./cody_taft_resume.pdf" type="application/pdf" class="pdf" />
+    <embed src="./cody taft resume.pdf" type="application/pdf" class="pdf" />
   </body>
 </html>
